<resources>
    <string name="app_name">Liverpool Directory</string>
    <string name="todo">TODO</string>
    <string name="start">Play</string>
    <string name="pause">Pause</string>
    <string name="lfc_trophies">LFC Trophies</string>
    <string name="players">Players</string>
    <string name="club_history">Club history</string>
    <string name="todo1">TODO</string>
    <string name="liverpool_football_club">LIVERPOOL FOOTBALL CLUB</string>
    <string name="todo3">TODO</string>
    <string name="futField">TODO</string>
    <string name="alisson">TODO</string>
    <string name="gk_1_alisson_b">GK 1 Alisson B.</string>
    <string name="todo6">TODO</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="x">X</string>
    <string name="todo5">TODO</string>
    <string name="todo4">TODO3</string>
    <string name="_12_2010_ii_2011_1_28_30_2013_1_2018_75_5_10_5_1_32_84_2_1_90_1_3_2018_2019_31_the_best_fifa_men_s_player_29_2019_20_38_5">Вирджил родился в Нидерландах, в городе Бреда. Отец Рон ван Дейк — телевизионный мастер. Он устроил сына в детскую футбольную команду и возил его на тренировки и матчи. Мать Хеллен Фо Сиу родом из Суринама, служила в военной полиции. У Вирджила есть младший брат Джордан и сестра Дженнифер. Его родители развелись, когда Вирджилу было 12 лет, дети остались с матерью и разорвали все контакты с отцом. Джордан и Дженнифер взяли девичью фамилию матери, а Вирджил предпочитает, чтобы на его футболках было написано имя, а не фамилия.\n \nВирджил ван Дайк — выпускник академии клуба «Гронинген», в которой оказался в 2010 году после года пребывания в «Виллем II». С 2011 года он стал выступать в стартовом составе «Гронингена», дебютировав 1 апреля в игре с «АДО Ден Хааг», где провёл на поле 28 минут. 30 октября Вирджил забил свой первый гол в карьере, поразив ворота «Фейеноорда». В январе 2013 года появилась информация, что ван Дейк может перейти в «Эвертон» или «Куинз Парк Рейнджерс».\n \n1 января 2018 года перешёл в «Ливерпуль», став самым дорогим защитником в истории. Сумма трансфера составила 75 миллионов фунтов, контракт был подписан сроком на 5 лет. «Селтик» получил 10 % от этой суммы. В «Ливерпуле» голландец получил четвёртый номер. При этом на его футболке нет фамилии. Вирджил считает, что его отец не заслужил, чтобы на майке была нанесена его фамилия. 5 января в своём дебютном матче за «Ливерпуль» против «Эвертона» в 1/32 финала Кубка Англии отличился победным голом на 84-й минуте матча. Встреча закончилась со счётом 2:1 в пользу «красных», а защитник с первого же матча расположил к себе поклонников команды. Клуб оперативно включил его в заявку на все турниры. Красные уже не боролись за титул, но зато смогли блеснуть в Лиге чемпионов, дойдя до финала турнира. В финальном матче против «Реала» сыграл все 90 минут, однако его команда уступила со счетом 1:3 из-за глупых ошибок голкипера Лориуса Кариуса.\n \nВ следующем сезоне «Ливерпуль» выиграл Лигу чемпионов и занял второе место в Премьер-лиге, потерпев лишь одного поражение в сезоне, но уступил в упорной борьбе «Манчестер Сити». Декабрь 2018 года начал с двух голевых передач в матчах против «Эвертона» и «Бернли». Курьезной передача получилась в мерсисайдском дерби. На последней минуте компенсированного времени ван Дейк пришел на подачу стандарта в чужую штрафную и попытался пробить слета. Удар у него получился корявым, однако мяч полетел по замысловатой траектории, ударился об перекладину и вернулся в поле, смутив голкипера «Эвертона» Джордана Пикфорда. Оказавшийся на добивании Дивок Ориги затолкнул мяч в ворота и принес хозяевам «Энфилда» важнейшую победу. За сезон ван Дейк зарекомендовал себя как ключевой игрок обороны «мерсисайдцев» и один из лидеров команды, что нашло отражение в индивидуальных наградах: в апреле 2019 года защитник получил награду «Игрок сезона английской Премьер-лиги», 31 июля попал шорт-лист из десяти претендентов на получение награды «The Best FIFA Men’s Player». 29 августа ван Дейк получил приз «лучшему футболисту года в Европе» по версии УЕФА. По итогам голосования на «Золотой мяч» голландец занял второе место, уступив лишь Лионелю Месси. В сезоне 2019/20 Ван Дейк сыграл за Ливерпуль 38 матчей и забил 5 мячей</string>
    <string name="_17_2013_25_a_2015_2016_17_2016_20_2017_a_2017_18_a_28_37_2017_18_2018_66_8_72_5_17_71_6_12">Алиссон — воспитанник клуба «Интернасьонал». 17 февраля 2013 года в матче Лиги Гаушу против «Крузейро» из Порту-Алегри он дебютировал за основную команду. 25 августа в поединке против «Гояса» Алиссон дебютировал в бразильской Серии A. В 2015 году после того, как Дида завершил карьеру, он стал основным вратарём команды. В составе «Интернасьонала» Алиссон трижды выиграл Лигу Гаушу. Летом 2016 года Бекер перешёл в итальянскую «Рому». 17 августа 2016 года в матче квалификации Лиги чемпионов против португальского «Порту» Алиссон дебютировал за «волков». Свой первый сезон в стане римлян Алиссон провёл в качестве второго вратаря команды, заменяя основного голкипера «волков» Войцеха Щенсны в матчах Кубка Италии и Лиги Европы. После перехода Щенсны в «Ювентус» Бекер стал основным вратарём команды. 20 августа 2017 года в матче против «Аталанты» он дебютировал в итальянской Серии A. Став основным вратарём в составе «волков», Алиссон смог быстро продемонстрировать высокий уровень игры на воротах и помог команде укрепить оборону. В сезоне 2017/18 римляне смогли укрепиться на вершине таблицы итальянского чемпионата, заняв третье место, а Бекер был признан лучшим голкипером в Серии A, пропустив всего 28 мячей в 37 играх (второй показатель после «Ювентуса»). Однако главным успехом в сезоне стал второй в истории выход клуба в полуфинал Лиги чемпионов. В большинстве матчей турнира Бекер продемонстрировал надёжную игру, а в домашнем матче с мадридским «Атлетико» он был признан лучшим игроком матча. Также Бекер смог отличиться хорошей игрой в домашних матчах против лондонского «Челси» и донецкого «Шахтёра». Несколько противоречивым вышло двухматчевое противостояние с «Барселоной» в четвертьфинале Лиги Чемпионов, где в первом матче на Камп Ноу Бекер пропустил четыре мяча (причем два из них — автоголы Де Росси и Маноласа), а в ответном матче на Стадио Олимпико Бекер успешно отстоял ворота, а команда смогла совершить камбэк и выйти в полуфинал Лиги Чемпионов. В полуфинале с «Ливерпулем», Бекер пропустил всего семь мячей, пять из которых пришлись на первый матч на Энфилде. По окончанию турнира, Бекер вошел в символическую сборную лучших игроков розыгрыша Лиги Чемпионов 2017/18. Уже в начале 2018 года заинтересованность во вратаре проявили испанская «Барселона», французский «Пари Сен-Жермен» и английский «Ливерпуль». Летом того же года Алиссон подписал шестилетний контракт с последним. Сумма трансфера составила 66,8 млн фунтов (72,5 млн евро), что сделало Бекера самым дорогим вратарём в истории (прежнее достижение принадлежало итальянцу Джанлуиджи Буффону и продержалось 17 лет). С другой стороны, рекордный трансфер Алиссона продержался всего месяц, пока не был осуществлён трансфер Кепы Аррисабалаги из баскского «Атлетика» в «Челси» за 71,6 млн фунтов. 12 августа в матче против «Вест Хэм Юнайтед» он дебютировал в английской Премьер-лиге.</string>
    <string name="_29">Вирджил ван Дайк, 29 лет</string>
    <string name="salah_bio">Начал профессиональную карьеру в египетском клубе (футбольный клуб) спустя некоторое время перешёл в швейцарский клуб «Базель». В 2014 году контракт футболиста выкупил английский «Челси». В составе лондонского клуба не смог закрепиться в качестве основного игрока, в связи с чем был отдан в аренду итальянским клубам «Фиорентина» и «Рома». Проведя в составе «Ромы» один год, перешёл в этот клуб на постоянной основе, ещё через год вернулся в Премьер-лигу, подписав контракт с «Ливерпулем».\n \nВ своём первом сезоне в составе «Ливерпуля» побил несколько рекордов результативности и стал лучшим бомбардиром Премьер-лиги. Был назван лучшим игроком года по версии футболистов ПФА, а также вошёл в состав символической команды года по версии ПФА. В следующем сезоне Салах вновь стал лучшим бомбардиром Премьер-лиги[b] и помог «Ливерпулю» выиграть Лигу чемпионов.\n \n На уровне сборных Салах начал выступать в молодёжных командах. После участия в летних Олимпийских играх 2012 года он был назван самым многообещающим талантом года в Африке по версии КАФ. С тех пор в составе основной сборной вышел в финал Кубка африканских наций 2017 года, а также помог своей команде пройти отбор на чемпионат мира 2018 года. Был назван лучшим африканским футболистом года по версии КАФ в 2017 и 2018 году[, а также лучшим африканским футболистом года по версии Би-би-си в этих же годах.</string>
    <string name="todo31">TODO</string>
    <string name="x1">X</string>
    <string name="salah_bio1">Мохаммед Салах, 28 лет</string>
    <string name="wijnaldum_head">Джини Вейналдум,</string>
    <string name="wijnaldum_bio">Джорджиньо Вейналдум (нид. Georginio Wijnaldum) – голландский футболист суринамского происхождения, родился 11 ноября 1990 года в Роттердаме.\n\nВ детстве Джорджиньо не интересовался футболом, не играл и не смотрел матчи, и хотел стать гимнастом или акробатом. Когда ему было семь лет, его племянник попросил сходить с ним на просмотр в клуб «Спарта», и по результатам этого просмотра Вейналдума взяли в футбольную академию команды. \n\nВейналдум быстро стал одним из лидеров академии, и к нему стали проявлять интерес ведущие клубы страны, но игрок отвечал отказом на все предложения. После семи лет в «Спарте» в возрасте четырнадцати лет Вейналдум всё же принял очередное предложение и перешёл в академию «Фейеноорда». \n\nСпустя несколько недель после шестнадцатилетия в январе 2007 года Джорджиньо был вызван главным тренером в первую команду «Фейеноорда». Уже в апреле он дебютировал в основе клуба, став самым молодым игроком «Фейеноорда», выходившим на поле в матче Эредивизе. \n\nВ сезоне 2008/2009 Вейналдум дебютировал на европейской арене, выйдя в стартовом составе матча Кубка УЕФА против «Кальмара» 16 сентября. 2 октября он забил свой первый мяч в еврокубках в ответном матче против «Кальмара» и помог команде выйти в групповой этап Кубка. \n\nВсего за пять сезонов в «Фейеноорде» Джорджиньо сыграл 134 матча во всех турнирах и забил 25 голов, и ещё 11 раз записал на свой счёт голевые пасы. \n\nВ июне 2011 года Вейналдум перешёл в ПСВ за 5 миллионов евро. Он быстро закрепился в стартовом составе и уверенно забивал голы и ассистировал другим в чемпионате страны, кубке и Лиге Европы. Когда летом 2013 Марк ван Боммел завершил карьеру, а Кевин Стротман покинул клуб, Джорджиньо был назван капитаном команды. В сезоне 2013/2014 он сыграл всего 11 игр из-за травмы спины, но к следующему он вернулся в идеальной форме и с капитанской повязкой привёл ПСВ к чемпионскому титулу. \n\n11 июля 2015 года Вейналдум сделал следующий шаг в карьере и перешёл в английский «Ньюкасл». В течение сезона он сыграл во всех матчах «сорок» в чемпионате, забив 11 голов, в том числе оформил свой первый покер в карьере в матче против «Норвича». Тем не менее, его голы не помогли «Ньюкаслу» спастись от вылета в Чемпионшип. \n\n22 июля 2016 года было объявлено, что Вейналдум переходит в «Ливерпуль». Пресса сообщила, что сумма сделки составила 23 миллионов фунтов плюс 2 миллиона бонусов.</string>
    <string name="wijnaldum_bio1">Джорджиньо Вейналдум, 29 лет</string>
</resources>